--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha test/test.js --reporter-options output=dump.json --reporter json",
     "start": "node index.js"
   },
   "repository": {
